docs/2.x/customer/README.md
# Customer Overview

Visitors to your website can open an account to manage their purchases and activities. Customers generally create their own accounts in their shop. However, you can also create customer accounts directly from the administrator, which is useful for helping customers on the phone.

### Customer Groups

Customer groups allow you to organize your customers, give them discounts, and restrict access to specific products or categories. With Customer Groups, you can: set up a loyalty group — give access to specific products or categories at discounted rates to select customers.

Customer groups determine which discounts are available and the tax class that is associated with the group. The default customer groups are General, Guest, and Wholesale.

#### Wholesale Group

Wholesale customers usually have access to products or bundles of products not available to retail customers, and they often have a discount on the products they buy. Both of these can be set up by using the Customer Groups feature.

To restrict wholesale products from retail customers, you will first need to create a category specifically for those products. Then, you will need to segment your customers, so that only wholesale customers can view those products.

#### Guest Group 

The Guest group is the only one which can apply to guests and cannot be edited or deleted. A non logged in group also falls under this guest group

#### General Group 

General customer group refers to customers who are not defined as Professional Customer and dont want the order products in bulk.

### Customer Reviews

Customer reviews are an important aspect of an eCommerce business. And as an eCommerce business owner, it should be an integral part of your online marketing strategy. Reviews create credibility for your products, and increased credibility means increased sales.

It helps other customers for the selections of the product.A customer review is an evaluation of a product or service made by someone who has purchased and used, or had experience with, a product or service. Customer reviews are a form of customer feedback on electronic commerce and online shopping sites.

